2014-09-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* net/tramp-sh.el (tramp-sh-handle-vc-registered): Don't modify
	the global vc-handled-backends (bug#18535).

2014-09-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* find-cmd.el (find-cmd): Use grep's `find-program' (bug#18518).
	Suggested by <lompik@voila.fr>.

2014-09-24  Ulf Jasper  <ulf.jasper@web.de>

	* net/newst-treeview.el (newsticker--treeview-do-get-node-by-id):
	Rename from `newsticker--treeview-do-get-node'.
	(newsticker--treeview-get-node-by-id):
	Rename from `newsticker--treeview-get-node'.
	(newsticker--treeview-buffer-init)
	(newsticker--treeview-buffer-init): Disable buffer undo.
	(newsticker--treeview-unfold-node): Adapt to modified
	`newsticker--group-find-parent-group'.
	(newsticker--group-do-find-group):
	Rename from `newsticker--group-do-find-group-for-feed'.
	Now works for both, groups and feeds.
	(newsticker--group-find-parent-group):
	Rename from `newsticker--group-find-group-for-feed'.
	Now works for both, groups and feeds.
	(newsticker--group-do-get-parent-group)
	(newsticker--group-get-parent-group): Remove.
	(newsticker-group-add-group): Change interactive prompts.
	(newsticker-group-add-group): Finally jump to added group.
	(newsticker-group-delete-group): Finally jump to current feed.
	(newsticker--group-do-rename-group, newsticker-group-rename-group)
	(newsticker--get-group-names, newsticker--group-names): New.
	(newsticker-group-move-feed): Finally jump to moved feed.
	(newsticker-group-shift-feed-down, newsticker-group-shift-feed-up)
	(newsticker-group-shift-group-down)
	(newsticker-group-shift-group-up, newsticker--group-shift): New.
	(newsticker-treeview-mode-map): New keybindings for new shift commands.

	* net/newst-backend.el (newsticker--item-list)
	(newsticker--item-position, newsticker--prev-message)
	(newsticker--scrollable-text): Move to newst-ticker.el.

	* net/newst-ticker.el (newsticker--item-list)
	(newsticker--item-position, newsticker--prev-message)